# cololite.raylib

./: .clang-tidy  .gitignore  CMakeLists.txt
src/actors/: CMakeLists.txt
src/actors/headers/: map_actor.hh
src/actors/map/: corner_actor.cc  edge_actor.cc  hex_actor.cc  map_actor.cc
src/actors/map/headers/: corner_actor.hh  edge_actor.hh  hex_actor.hh  map_actor.hh
src/engine/: CMakeLists.txt  actor.cc  animations.cc  engine.cc  generic_actors.cc  map_actors.cc
src/engine/common/: CMakeLists.txt  actor.cc  animations.cc  engine.cc  engine_core.cc  engine_settings.cc  generic_actors.cc  map_actors.cc  utils.cc
src/engine/common/headers/: actor.hh  engine.hh  engine_core.hh  engine_hash.hh  engine_settings.hh  generic_actors.hh  map_actors.hh  scene.hh  utils.hh
src/engine/common/tests/: CMakeLists.txt  layered_container_tests.cc
src/engine/headers/: actor.hh  animations.hh  engine.hh  engine_settings.hh  map_actors.hh
src/engine/macos/: CMakeLists.txt
src/engine/macos/headers/: screensize.hh
src/game/: CMakeLists.txt  coords.cc  game.cc  game_sequence.cc  game_state.cc  map.cc
src/game/headers/: game_sequence.hh  game_state.hh  map.hh
src/macosspecific/: CMakeLists.txt  screensize.mm
src/macosspecific/headers/: screensize.hh
src/main/: CMakeLists.txt  cololite.cc
src/map/: CMakeLists.txt  coords.cc  coords.gd  game.cc  game_sequence.cc  map.cc  map.gd
src/map/headers/: coords.hh  coords_hash.hh  game.hh  game_sequence.hh  map.hh
src/map/tests/: CMakeLists.txt  basic_add_tests.cc  hex_coord_2_unit_tests.cc  hex_map_creation.cc  ut_map_bounds.cc
src/utils/: CMakeLists.txt  observer.cc
src/utils/headers/: observer.hh
